[package]
name = "rfc-graph"
version = "0.3.1"
edition = "2021"
license = "MIT"

description = "How the rfc are referencing each other"
homepage = "https://github.com/Mathieu-Lala/rfc-graph"
repository = "https://github.com/Mathieu-Lala/rfc-graph"

readme = "README.md"
keywords = ["api", "rfc", "graph", "parser", "data"]
categories = ["development-tools"]

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }

anyhow = "1.0.54"

serde = "1.0.136"
serde_json = "1.0.79"

reqwest = { version = "0.11" }
scraper = "0.12.0"

petgraph = "0.6.0"

tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"

async-stream = "0.3.2"
async-recursion = "1.0.0"

## other thingy

vsmtp-rsasl = { version = "1.5.0", default-features = false }

[dev-dependencies]
iai = "0.1.1"
criterion = "0.3.5"


[[bench]]
name = "proof_criterion"
harness = false

[[bench]]
name = "proof_iai"
harness = false


[features]
default = ["vsmtp-rsasl/default"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
features = []
