[package]
name = "rfc-graph"

authors = ["Mathieu LALA <mathieu.lala@epitech.eu>"]
version = "0.4.2"
edition = "2021"
license = "MIT"

description = "How the rfc are referencing each other"
homepage = "https://github.com/Mathieu-Lala/rfc-graph"
repository = "https://github.com/Mathieu-Lala/rfc-graph"

readme = "README.md"
keywords = ["api", "rfc", "graph", "parser", "data"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }

anyhow = "1.0.66"

serde = "1.0.150"
serde_json = "1.0.79"

reqwest = { version = "0.11.13" }
scraper = "0.13.0"

petgraph = "0.6.2"

tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"

async-stream = "0.3.3"
async-recursion = "1.0.0"

[features]

[package.metadata.docs.rs]
features = []
all-features = false
no-default-features = true

[dev-dependencies]
iai = "0.1.1"
criterion = "0.3.5"

[[bench]]
name = "proof_criterion"
harness = false

[[bench]]
name = "proof_iai"
harness = false

[[bench]]
name = "iai_proof"
harness = false
path = "benches/iai/proof.rs"

[[bench]]
name = "iai_proof2"
harness = false
path = "benches/iai/proof2.rs"

[package.metadata.deb]
changelog = "./package/deb/changelog"
